# django-logical-replication

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile  LICENSE  README.md  build_synced_contrib_tables.sql  conftest.py  docker-compose.yml  init_master.sql  init_slave.sql  manage.py  mypy.ini  pylint-tests.ini  pyproject.toml  pytest.ini  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
dummy_app/: admin.py  apps.py  models.py  signals.py  tests.py
dummy_app/migrations/: 0001_initial.py  0002_auto_20230808_0311.py
logical_replication/: admin.py  apps.py  cron.py  event_handlers.py  models.py  router.py
logical_replication/management/commands/: create_django_contrib_tables.py  create_publication.py  create_subscription.py  populate_content_types.py  print_delete_sql.py  print_dump_system_tables.py  resync_user_table_fks.py  update_publication.py  update_subscription.py
logical_replication/migrations/: 0001_initial.py  0002_alter_deletequeue_options.py
logical_replication/utils/: __init__.py  commands.py  decorators.py  replication.py
sample_project/: settings.py  urls.py
