[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
  "build>=0.7.0"
]

[project]
name = "django_logical_replication"
version = "2.0.2"
description = "A Django package to sync tables across environments using PostgreSQL logical replication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "gitpython>=3.1.47",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "setuptools",
    "ruff>=0.9.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.2",
    "django-stubs>=5.0",
    "commitizen>=3.12.0",
    "bandit>=1.7.7",
    "ipython>=8.17.1",
    "jedi>=0.19.1",
    "ipdb>=0.13.13",
]
test = [
    "django-cron @ git+https://github.com/jorenham/django-cron.git",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.7.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sample_project.settings"
markers = ["enable_signals"]

["coverage:report"]
skip_empty = true

[tool.ruff]
line-length = 88
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["logical_replication", "dummy_app", "sample_project"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.2"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "setup.py:version"
]
